# TP3-Airflow

./: .env_postgres  .env_sqLite  .gitignore  createTables.py  db.py  dockerfile  iniciaDB.sql  install.sh  models.py  otherRequirements.sh  pyproject.toml
.github/workflows/: workflow.yml
dags/: obtainPrices_dag.py  sqlConnexion.py  sqlPostgresCli.py
test/: conftest.py  test_dataOutput_dag.py
test/data/: test_obtainAndProcesInput_dag.py
